// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiTab Props is disabled 1`] = `
<button
  aria-selected="false"
  class="ouiTab ouiTab-isDisabled"
  disabled=""
  role="tab"
  type="button"
>
  <span
    class="ouiTab__content"
  >
    Click Me
  </span>
</button>
`;

exports[`OuiTab renders anchor 1`] = `
<a
  aria-label="aria-label"
  aria-selected="false"
  class="ouiTab testClass1 testClass2"
  data-test-subj="test subject string"
  href="/baz/bing"
  rel="noreferrer"
  role="tab"
>
  <span
    class="ouiTab__content"
  >
    children
  </span>
</a>
`;

exports[`OuiTab renders button 1`] = `
<button
  aria-label="aria-label"
  aria-selected="false"
  class="ouiTab testClass1 testClass2"
  data-test-subj="test subject string"
  role="tab"
  type="button"
>
  <span
    class="ouiTab__content"
  >
    children
  </span>
</button>
`;

exports[`OuiTab renders isSelected 1`] = `
<button
  aria-label="aria-label"
  aria-selected="true"
  class="ouiTab testClass1 testClass2 ouiTab-isSelected"
  data-test-subj="test subject string"
  role="tab"
  type="button"
>
  <span
    class="ouiTab__content"
  >
    children
  </span>
</button>
`;
